--- a/fx_ai_analysis.ipynb
+++ b/fx_ai_analysis.ipynb
@@ -4,11 +4,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# FX AI Аналитика — исследовательский ноутбук\n",
+        "# FX AI Analytics — Exploratory Notebook\n",
         "\n",
-        "Этот ноутбук демонстрирует, как программно использовать функции из `app.py` без Streamlit UI: загрузить данные, обучить модели, посчитать новости и события, получить итоговый сигнал и визуализировать цену и ATR(14).\n",
+        "This notebook demonstrates how to programmatically use functions from `app.py` without Streamlit UI: load data, train models, calculate news and events, get the final signal and visualize price and ATR(14).\n",
         "\n",
-        "Ниже идут шаги: импорт, конфигурация инструмента, расчёты и графики, а в конце — текстовые рекомендации и возможные узкие места текущего подхода."
+        "Below are the steps: imports, instrument configuration, calculations and charts, and at the end — text recommendations and possible bottlenecks of the current approach."
       ]
     },
     {
@@ -50,9 +50,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. Конфигурация инструмента\n",
+        "## 1. Instrument Configuration\n",
         "\n",
-        "Задаём тикер, человеко-понятное имя, глубину истории и таймфрейм. Профиль (консервативный/агрессивный и т.п.) можно оставить `None`, тогда будут использованы настройки по умолчанию из `INSTRUMENT_SETTINGS` внутри `app.py`."
+        "Set the ticker, human-readable name, history depth and timeframe. The profile (conservative/aggressive, etc.) can be left as `None`, then default settings from `INSTRUMENT_SETTINGS` inside `app.py` will be used."
       ]
     },
     {
@@ -81,16 +81,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Быстрый вызов единого пайплайна\n",
+        "## 2. Quick Unified Pipeline Call\n",
         "\n",
-        "Используем высокоуровневую функцию `get_signals_for_ticker`, которая внутри:\n",
-        "- загружает ценовую историю через `yfinance`;\n",
-        "- строит фичи, таргеты и обучает модели;\n",
-        "- считает новости и будущие события;\n",
-        "- строит паттерны и интегральный скоринг;\n",
-        "- добавляет в сигнал последние значения ATR(14) и уровень волатильности.\n",
+        "Using the high-level function `get_signals_for_ticker`, which internally:\n",
+        "- loads price history via `yfinance`;\n",
+        "- builds features, targets and trains models;\n",
+        "- calculates news and future events;\n",
+        "- builds patterns and integral scoring;\n",
+        "- adds the latest ATR(14) values and volatility level to the signal.\n",
         "\n",
-        "Это удобная точка входа для API и мониторинга."
+        "This is a convenient entry point for API and monitoring."
       ]
     },
     {
@@ -113,9 +113,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Детальный шаг за шагом пайплайн\n",
+        "## 3. Detailed Step-by-Step Pipeline\n",
         "\n",
-        "Теперь повторим ключевые шаги раздельно: загрузка данных, построение признаков, обучение моделей и объединение сигналов. Это полезно для отладки и экспериментов."
+        "Now let's repeat the key steps separately: data loading, feature engineering, model training and signal combination. This is useful for debugging and experiments."
       ]
     },
     {
@@ -147,9 +147,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Новости, события, паттерны и финальный сигнал\n",
+        "## 4. News, Events, Patterns and Final Signal\n",
         "\n",
-        "Считаем новостной фон, будущие макро-события, паттерны по цене и собираем финальный интегральный сигнал, включая информацию по ATR(14)."
+        "Calculating news sentiment, future macro-events, price patterns and assembling the final integral signal, including ATR(14) information."
       ]
     },
     {
@@ -186,9 +186,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Визуализация: цена, ATR(14), прогнозы и классификация\n",
+        "## 5. Visualization: Price, ATR(14), Forecasts and Classification\n",
         "\n",
-        "Используем те же функции построения графиков, что и внутри Streamlit-приложения, но показываем их напрямую в ноутбуке через Plotly."
+        "Using the same plotting functions as inside the Streamlit app, but showing them directly in the notebook via Plotly."
       ]
     },
     {
