--- a/fx_ai_backtest.ipynb
+++ b/fx_ai_backtest.ipynb
@@ -4,18 +4,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# FX AI Backtest и метрики\n",
+        "# FX AI Backtest and Metrics\n",
         "\n",
-        "Этот ноутбук строит простой бэктест на основе уже обученных моделей внутри `app.py`.\n",
+        "This notebook builds a simple backtest based on already trained models inside `app.py`.\n",
         "\n",
-        "Подход:\n",
-        "- используем ту же логику подготовки данных и обучения, что и в Streamlit-приложении;\n",
-        "- берём предсказания классификатора (по умолчанию SVC) на тестовом отрезке;\n",
-        "- строим стратегию: позиция = сигнал (BUY=+1, HOLD=0, SELL=-1), удерживаем один шаг горизонта вперёд;\n",
-        "- считаем дневную доходность стратегии, кривую капитала, Sharpe, max drawdown, hit rate;\n",
-        "- сравниваем с простым buy&hold на том же периоде.\n",
+        "Approach:\n",
+        "- use the same data preparation and training logic as in the Streamlit application;\n",
+        "- take classifier predictions (SVC by default) on the test segment;\n",
+        "- build a strategy: position = signal (BUY=+1, HOLD=0, SELL=-1), hold for one horizon step;\n",
+        "- calculate daily strategy returns, equity curve, Sharpe, max drawdown, hit rate;\n",
+        "- compare with simple buy&hold on the same period.\n",
         "\n",
-        "Такой бэктест намеренно упрощён (нет комиссий, проскальзываний и т.п.), но позволяет быстро оценить поведение сигналов."
+        "Such a backtest is intentionally simplified (no commissions, slippage, etc.), but allows for quick evaluation of signal behavior."
       ]
     },
     {
@@ -45,9 +45,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. Конфигурация инструмента\n",
+        "## 1. Instrument Configuration\n",
         "\n",
-        "Задаём базовые параметры для бэктеста. При желании их можно менять и запускать ноутбук повторно."
+        "Set base parameters for the backtest. If desired, they can be changed and the notebook re-run."
       ]
     },
     {
@@ -81,10 +81,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Подготовка данных и обучение моделей\n",
+        "## 2. Data Preparation and Model Training\n",
         "\n",
-        "Повторяем тот же пайплайн, что и внутри `app.py`: загрузка данных, фичи, таргеты, обучение моделей.\n",
-        "Нас интересует в первую очередь классификационная часть и разбиение на train/test."
+        "Repeating the same pipeline as inside `app.py`: data loading, features, targets, model training.\n",
+        "We are primarily interested in the classification part and the train/test split."
       ]
     },
     {
@@ -95,7 +95,7 @@
       "source": [
         "df_raw = load_price_data(ticker, years=years, interval=interval)\n",
         "if df_raw is None or df_raw.empty:\n",
-        "    raise RuntimeError(\"Не удалось загрузить данные по тикеру\")\n",
+        "    raise RuntimeError(\"Failed to load data for ticker\")\n",
         "\n",
         "df_full = add_features(df_raw)\n",
         "df_model = add_targets(\n",
@@ -114,14 +114,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Построение простой стратегии на основе сигналов SVC\n",
+        "## 3. Building a Simple Strategy Based on SVC Signals\n",
         "\n",
-        "Берём предсказания SVC по классам:\n",
+        "Taking SVC class predictions:\n",
         "- `-1` — SELL,\n",
         "- `0` — HOLD,\n",
         "- `1` — BUY.\n",
         "\n",
-        "Используем тестовый отрезок (последние 20% данных), на каждом шаге держим позицию, равную сигналу, и считаем доходность на один шаг вперёд."
+        "Using the test segment (last 20% of data), holding a position equal to the signal at each step, and calculating the return one step forward."
       ]
     },
     {
@@ -133,7 +133,7 @@
         "df_back = df_model.iloc[split:].copy()\n",
         "svc_pred = model_data.get(\"svc_pred_test\")\n",
         "if svc_pred is None:\n",
-        "    raise RuntimeError(\"В model_data нет предсказаний SVC\")\n",
+        "    raise RuntimeError(\"No SVC predictions in model_data\")\n",
         "\n",
         "svc_pred = np.asarray(svc_pred, dtype=float)\n",
         "n = min(len(df_back), len(svc_pred))\n",
@@ -154,13 +154,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Подсчёт метрик: доходность, Sharpe, max drawdown, hit rate\n",
+        "## 4. Calculating Metrics: Return, Sharpe, Max Drawdown, Hit Rate\n",
         "\n",
-        "Считаем:\n",
-        "- накопленную доходность стратегии и buy&hold;\n",
-        "- дневной Sharpe (≈ sqrt(252) * mean / std);\n",
-        "- максимальную просадку по кривой капитала;\n",
-        "- hit rate (доля дней, когда стратегия правильно угадывает знак следующего движения)."
+        "Calculating:\n",
+        "- accumulated return of strategy and buy&hold;\n",
+        "- daily Sharpe (≈ sqrt(252) * mean / std);\n",
+        "- max drawdown of equity curve;\n",
+        "- hit rate (fraction of days when the strategy correctly guesses the sign of the next movement)."
       ]
     },
     {
@@ -198,24 +198,24 @@
         "metrics_table = pd.DataFrame(\n",
         "    [\n",
         "        {\n",
-        "            \"Метрика\": \"Cumulative return (strategy)\",\n",
-        "            \"Значение\": cum_ret_strat,\n",
+        "            \"Metric\": \"Cumulative return (strategy)\",\n",
+        "            \"Value\": cum_ret_strat,\n",
         "        },\n",
         "        {\n",
-        "            \"Метрика\": \"Cumulative return (buy&hold)\",\n",
-        "            \"Значение\": cum_ret_bh,\n",
+        "            \"Metric\": \"Cumulative return (buy&hold)\",\n",
+        "            \"Value\": cum_ret_bh,\n",
         "        },\n",
         "        {\n",
-        "            \"Метрика\": \"Sharpe (strategy, daily)\",\n",
-        "            \"Значение\": sharpe,\n",
+        "            \"Metric\": \"Sharpe (strategy, daily)\",\n",
+        "            \"Value\": sharpe,\n",
         "        },\n",
         "        {\n",
-        "            \"Метрика\": \"Max drawdown (strategy)\",\n",
-        "            \"Значение\": max_dd,\n",
+        "            \"Metric\": \"Max drawdown (strategy)\",\n",
+        "            \"Value\": max_dd,\n",
         "        },\n",
         "        {\n",
-        "            \"Метрика\": \"Hit rate (direction, strategy)\",\n",
-        "            \"Значение\": hit_rate,\n",
+        "            \"Metric\": \"Hit rate (direction, strategy)\",\n",
+        "            \"Value\": hit_rate,\n",
         "        },\n",
         "    ]\n",
         ")\n",
@@ -226,13 +226,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Добавляем стратегии по сигналам LGBM и Hybrid\n",
+        "## 5. Adding Strategies Based on LGBM and Hybrid Signals\n",
         "\n",
-        "В `model_data` уже есть предсказания других классификаторов:\n",
-        "- `class_pred_test` — сигналы LGBM (после порога и сглаживания);\n",
-        "- `hybrid_class_pred_test` — гибрид LGBM+LSTM (если LSTM доступен).\n",
+        "`model_data` already contains predictions from other classifiers:\n",
+        "- `class_pred_test` — LGBM signals (after threshold and smoothing);\n",
+        "- `hybrid_class_pred_test` — Hybrid LGBM+LSTM (if LSTM is available).\n",
         "\n",
-        "Построим для них такие же простые стратегии, как для SVC, и сравним метрики."
+        "Let's build similar simple strategies for them as for SVC, and compare metrics."
       ]
     },
     {
@@ -279,7 +279,7 @@
         "    max_dd_local = float(dd.min())\n",
         "    metrics_rows.append(\n",
         "        {\n",
-        "            \"Стратегия\": name,\n",
+        "            \"Strategy\": name,\n",
         "            \"Cumulative return\": cum_ret,\n",
         "            \"Sharpe\": sharpe_local,\n",
         "            \"Max drawdown\": max_dd_local,\n",
@@ -294,9 +294,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Визуализация PnL стратегий SVC / LGBM / Hybrid vs buy&hold\n",
+        "## 6. Visualization of PnL for SVC / LGBM / Hybrid vs buy&hold Strategies\n",
         "\n",
-        "Теперь сравним сразу несколько стратегий на одном графике: SVC, LGBM, Hybrid и buy&hold."
+        "Now let's compare several strategies on one chart: SVC, LGBM, Hybrid and buy&hold."
       ]
     },
     {
@@ -347,9 +347,9 @@
         "    )\n",
         ")\n",
         "fig.update_layout(\n",
-        "    title=f\"PnL стратегий (SVC / LGBM / Hybrid) vs Buy&Hold ({instrument_name}, test segment)\",\n",
-        "    xaxis_title=\"Дата\",\n",
-        "    yaxis_title=\"Капитал (нормирован)\",\n",
+        "    title=f\"Strategies PnL (SVC / LGBM / Hybrid) vs Buy&Hold ({instrument_name}, test segment)\",\n",
+        "    xaxis_title=\"Date\",\n",
+        "    yaxis_title=\"Equity (normalized)\",\n",
         "    hovermode=\"x unified\",\n",
         "    template=\"plotly_white\",\n",
         "    legend=dict(orientation=\"h\"),\n",
@@ -361,31 +361,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7. Рекомендации и типичные ошибки такого бэктеста\n",
+        "## 7. Recommendations and Typical Mistakes of Such a Backtest\n",
         "\n",
-        "1. **Отсутствие транзакционных издержек**  \n",
-        "   В текущем расчёте нет комиссий, спреда и проскальзывания. В реальности FX-спред и комиссии брокера могут существенно уменьшить доходность, особенно если стратегия часто торгует.\n",
+        "1. **Absence of Transaction Costs**  \n",
+        "   The current calculation does not include commissions, spreads, or slippage. In reality, FX spreads and broker commissions can significantly reduce returns, especially if the strategy trades frequently.\n",
         "\n",
-        "2. **Фиксированный горизонт удержания**  \n",
-        "   Здесь предполагается, что сигнал действует ровно один шаг вперёд. В реальности сигналы могут иметь разный \"срок жизни\", и может потребоваться более сложная логика выхода (take profit, stop loss, трейлинг и т.п.).\n",
+        "2. **Fixed Holding Horizon**  \n",
+        "   Here it is assumed that the signal lasts exactly one step forward. In reality, signals can have different \"lifespans\", and more complex exit logic (take profit, stop loss, trailing, etc.) may be required.\n",
         "\n",
-        "3. **Использование только одного классификатора (SVC)**  \n",
-        "   В проекте есть несколько моделей (LGBM, LSTM, Hybrid). Этот ноутбук использует только SVC как основную модель для сигналов. Для более полного анализа стоит построить такие же бэктесты для разных вариантов сигналов и сравнить результаты.\n",
+        "3. **Use of Only One Classifier (SVC)**  \n",
+        "   The project has several models (LGBM, LSTM, Hybrid). This notebook uses only SVC as the main model for signals. For a more complete analysis, it is worth building similar backtests for different signal variants and comparing results.\n",
         "\n",
-        "4. **Риск подгонки к истории**  \n",
-        "   Параметры моделей, горизонта и порогов классификации подбирались на истории. При изменении режима рынка качество может ухудшиться. Полезно:\n",
-        "   - проверять модель на нескольких несоприкасающихся временных отрезках;\n",
-        "   - регулярно переобучать модели и отслеживать скользящие метрики.\n",
+        "4. **Risk of Overfitting to History**  \n",
+        "   Model parameters, horizon, and classification thresholds were selected on history. When the market regime changes, quality may deteriorate. It is useful to:\n",
+        "   - check the model on several non-overlapping time periods;\n",
+        "   - regularly retrain models and track rolling metrics.\n",
         "\n",
-        "5. **Частота сигналов и фильтрация по волатильности**  \n",
-        "   Здесь в стратегию попадают все сигналы SVC. В проекте уже есть оценка волатильности по ATR(14); логичным развитием будет:\n",
-        "   - не торговать при экстремально высокой волатильности (снижать размер позиции или полностью фильтровать сигналы);\n",
-        "   - адаптировать порог уверенности классификатора в зависимости от волатильности.\n",
+        "5. **Signal Frequency and Volatility Filtering**  \n",
+        "   Here, all SVC signals fall into the strategy. The project already has volatility estimation by ATR(14); a logical development would be:\n",
+        "   - not to trade during extremely high volatility (reduce position size or completely filter signals);\n",
+        "   - adapt the classifier confidence threshold depending on volatility.\n",
         "\n",
-        "6. **Неявная зависимость от конкретного периода теста**  \n",
-        "   Мы используем последнее 20% окно данных как тест. Если рынок в этот период был аномальным, метрики могут быть не репрезентативны. Для более надёжной оценки стоит реализовать скользящее или перекрёстное тестирование (например, walk-forward).\n",
+        "6. **Implicit Dependence on Specific Test Period**  \n",
+        "   We use the last 20% data window as a test. If the market was anomalous during this period, the metrics may not be representative. For a more reliable assessment, it is worth implementing rolling or cross-validation (e.g., walk-forward).\n",
         "\n",
-        "Этот ноутбук даёт отправную точку для оценки качества сигналов на исторических данных. Дальше можно наращивать сложность: добавлять комиссии, тестировать разные модели/пороговые стратегии и строить отчёты по множеству тикеров."
+        "This notebook provides a starting point for assessing signal quality on historical data. Further complexity can be added: adding commissions, testing different models/threshold strategies, and building reports on multiple tickers."
       ]
     }
   ],
