--- a/notebooks/BTCUSD/btcusd_analysis.ipynb
+++ b/notebooks/BTCUSD/btcusd_analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BTC/USD AI анализ (ноутбук)\n",
+    "# BTC/USD AI Analysis (Notebook)\n",
     "\n",
-    "Исследовательский ноутбук для работы с моделью и данными для пары BTC/USD."
+    "Exploratory notebook for working with model and data for BTC/USD pair."
    ]
   },
   {
