--- a/notebooks/EURUSD/eurusd_analysis.ipynb
+++ b/notebooks/EURUSD/eurusd_analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EUR/USD AI анализ (ноутбук)\n",
+    "# EUR/USD AI Analysis (Notebook)\n",
     "\n",
-    "Исследовательский ноутбук для работы с моделью и данными для пары EUR/USD."
+    "Exploratory notebook for working with model and data for EUR/USD pair."
    ]
   },
   {
