--- a/notebooks/GBPUSD/gbpusd_analysis.ipynb
+++ b/notebooks/GBPUSD/gbpusd_analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GBP/USD AI анализ (ноутбук)\n",
+    "# GBP/USD AI Analysis (Notebook)\n",
     "\n",
-    "Исследовательский ноутбук для работы с моделью и данными для пары GBP/USD."
+    "Exploratory notebook for working with model and data for GBP/USD pair."
    ]
   },
   {
