--- a/notebooks/USDJPY/usdjpy_analysis.ipynb
+++ b/notebooks/USDJPY/usdjpy_analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# USD/JPY AI анализ (ноутбук)\n",
+    "# USD/JPY AI Analysis (Notebook)\n",
     "\n",
-    "Исследовательский ноутбук для работы с моделью и данными для пары USD/JPY."
+    "Exploratory notebook for working with model and data for USD/JPY pair."
    ]
   },
   {
