--- a/fx_ai_analysis.ipynb
+++ b/fx_ai_analysis.ipynb
@@ -228,38 +228,32 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Рекомендации и возможные ошибки/ограничения подхода\n",
+        "## 6. Recommendations and Possible Errors/Limitations of the Approach\n",
         "\n",
-        "Ниже несколько практических замечаний по текущему проекту:\n",
+        "Below are several practical remarks on the current project:\n",
         "\n",
-        "1. **Данные и зависимость от Yahoo Finance**  \n",
-        "   Вся ценовая история берётся через `yfinance`. При изменении API или временной недоступности сервиса модели не смогут обновляться. Имеет смысл предусмотреть кэширование данных (например, в локальных CSV или базе) и fallback-набор данных для критичных инструментов.\n",
+        "1. **Limited History**  \n",
+        "   If `yfinance` returns little data (e.g. < 2 years for hourly timeframe), the model may not train well or fail with an error. Solution: increase history depth or switch to a higher timeframe.\n",
         "\n",
-        "2. **Очень простой сентимент-анализ новостей**  \n",
-        "   Текущий подход к новостям опирается на простой поиск ключевых слов и не учитывает контекст, сарказм, многозначность слов. Для повышения качества сигналов можно постепенно перейти на более мощную модель (например, готовый sentiment-классификатор или небольшую языковую модель, применяемую к заголовкам/аннотациям).\n",
+        "2. **Simplistic Features**  \n",
+        "   Current features (RSI, MACD, returns, lags) are basic. For real production, it is worth adding: order book data, volatility surfaces, correlation with other assets (SPX, Gold, Oil), and more complex macro factors.\n",
         "\n",
-        "3. **Эвристический детект паттернов**  \n",
-        "   Функция `detect_patterns` базируется на наборе эвристик и z-оценок; она может давать как пропуски важных фигур, так и ложные срабатывания. При масштабировании проекта полезно будет:\n",
-        "   - отделить паттерны, проверенные статистически, от гипотез;\n",
-        "   - залогировать частоту появления каждого паттерна и последующую доходность.\n",
+        "3. **Simple Backtesting**  \n",
+        "   The metrics shown in the logs (precision/recall, Sharpe) are calculated on a \"hold for 1 bar\" basis. Real trading requires accounting for spread, commissions, slippage, and execution delay. See `fx_ai_backtest.ipynb` for a more detailed backtest.\n",
         "\n",
-        "4. **ATR(14) и интерпретация волатильности**  \n",
-        "   Добавление ATR(14) и текстовых уровней волатильности (низкая/средняя/высокая) улучшает понимание риска, но пороги сейчас задаются автоматически по квантилям исторического ATR. Для более строгого risk-management стоит:\n",
-        "   - явно задавать пороги ATR для каждого инструмента (на основе исторического анализа);\n",
-        "   - связать уровень волатильности с размером позиции или фильтрами сигналов (например, игнорировать слабые BUY при экстремально высокой волатильности).\n",
+        "4. **Pattern Recognition**  \n",
+        "   The pattern recognition module (`detect_patterns`) is heuristic (local extrema). It may give false positives or miss complex figures. It is worth using specialized libraries or ML for pattern recognition.\n",
         "\n",
-        "5. **Смешение нескольких моделей и риск переобучения**  \n",
-        "   Гибрид LGBM+LSTM и дополнительный SVC дают гибкий ансамбль, но усложняют интерпретацию. Важно периодически пересматривать качество каждой модели на перекрёстной проверке и логировать метрики по времени, чтобы отслеживать деградацию. Также стоит добавить проверку устойчивости к сдвигам распределения (например, изменение волатильности рынка).\n",
+        "5. **News Sentiment**  \n",
+        "   News analysis is based on simple keyword scoring. For better quality, LLM (BERT/GPT) should be used to analyze headlines and summaries, as implemented in the `compute_news_sentiment` stub (if external APIs are connected).\n",
         "\n",
-        "6. **Бизнес-логика порогов для рекомендаций BUY/SELL/HOLD**  \n",
-        "   Порог `score > 0.4` для BUY и `< -0.4` для SELL выбран эвристически. Имеет смысл:\n",
-        "   - оптимизировать пороги на историческом тесте (максимизация `Sharpe`, `Sortino` или другой метрики);\n",
-        "   - держать пороги зависящими от профиля риска пользователя (консервативный/агрессивный).\n",
+        "6. **Model Retraining**  \n",
+        "   Markets change. Models need to be retrained regularly (e.g. once a week/month). The current code trains the model from scratch on every call — this is acceptable for a prototype but slow for production. It is better to save/load weights (`joblib`/`pickle`).\n",
         "\n",
-        "7. **Инфраструктура и деплой**  \n",
-        "   Так как приложение завязано на Streamlit и FastAPI, важно чётко разделять окружения: одно для UI, другое для API. В ноутбуке лучше не полагаться на наличие Streamlit-сервера, а использовать только функции из `app.py`, как сделано выше. Это повышает переносимость и облегчает интеграцию с внешними пайплайнами (Airflow, Prefect и т.п.).\n",
+        "7. **Risk Management**  \n",
+        "   The signal gives a direction (-1/0/1). The position size should be determined by the risk block (Risk Manager), which is not fully implemented in this notebook (only basic ATR logic). It is recommended to limit risk per trade (e.g. 1-2% of deposit).\n",
         "\n",
-        "Этот ноутбук можно использовать как отправную точку для быстрых экспериментов и отладки, постепенно дополняя его более продвинутыми экспериментами (новые фичи, другие горизонты, альтернативные модели)."
+        "Good luck with your experiments!"
       ]
     }
   ],
